modules/voyscript/tests/scripts/analyzer/errors/use_value_of_void_function_gd_utility.voy
func test():
	print(print_debug()) # VoyScript utility function.
